# data-structure-assignment

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  cmake-variants.yaml
.github/workflows/: cmake-multi-platform.yml
assets/tools/: dump.py
balanced_tree/: CMakeLists.txt  README.md
balanced_tree/include/: avl.hpp  debug.hpp  gui.h  gui.hpp  treap.hpp  tree.hpp  util.hpp
balanced_tree/include/CRTP/: benchmark.hpp  crtp_avl.hpp  crtp_tree.hpp  interface.hpp  node_traits.hpp  tree_traits.hpp
balanced_tree/include/_legacy/: avl.hpp  treap.hpp  tree.hpp
balanced_tree/include/cli/: cli.hpp
balanced_tree/include/gui/: balanced_tree_renderer.hpp  events.hpp  gui.hpp  split_view.hpp  tree_gui.hpp  tree_renderer.hpp  view_manager.hpp  views.hpp
balanced_tree/include/traits/: node_traits.hpp  tree_external.hpp  tree_internal.hpp  tree_traits.hpp
balanced_tree/include/tree/: avl.hpp  basic.hpp  interface.hpp  splay.hpp  treap.hpp
balanced_tree/include/tree/traits/: node_traits.hpp  tree_traits.hpp
balanced_tree/src/: benchmark.hpp  gui.cpp  main.cpp  test.cpp
balanced_tree/src/gui/: balanced_tree_renderer.cpp  gui.cpp  scroll_manager.cpp  split_view.cpp  tree_renderer.cpp  view_manager.cpp  views.cpp
balanced_tree/src/test/: legacy.cpp  main.cpp  record.cpp  trace.cpp
knight_tour/include/: algorithm.h  board.h  gui.h
knights_tour/: CMakeLists.txt  README.md
knights_tour/include/: algorithm.h  board.h  debug.hpp  gui.h
knights_tour/include/gui/: chessboard_renderer.hpp  control_panel.hpp  gui.hpp  scroll_manager.hpp
knights_tour/src/: algorithm.cpp  board.cpp  main.cpp
knights_tour/src/gui/: chessboard_renderer.cpp  control_panel.cpp  gui.cpp
lib/doctest/: doctest.h
report/: knights-backend.typ  knights-gui.typ  knights.typ  main.typ  meta.typ  report.typ  slide.typ  theme.typ  tree-backend.typ  tree-gui.typ  tree.typ
report/raw/: inline-optimize.md
